<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundPlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hangedout_login"
    tools:context=".LoginRegister.PlayActivity">

    <ImageView
        android:id="@+id/nameAppImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/appNameImageContentDesc"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="0.85"
        app:layout_constraintBottom_toTopOf="@+id/postitImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/hangedout_name" />

    <ImageView
        android:id="@+id/postitImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/postitImageContentDesc"
        android:scaleType="centerInside"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toTopOf="@+id/logOutButtonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAppImage"
        app:srcCompat="@drawable/hangedout_postit" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#9FF44336"
        android:fontFamily="@font/tabitha"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:scaleX="1"
        android:text="@string/play"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/postitImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTextView"
        app:rippleColor="#D5F44336"
        app:strokeWidth="5dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/logOutButtonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/tabitha"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:scaleX="1"
        android:text="Log Out"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postitImage"
        app:strokeColor="#000000"
        app:strokeWidth="5dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/LogedLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/golden_chesse"
        android:text="@string/you_are_loged_as"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/emailLoginTextView"
        app:layout_constraintEnd_toEndOf="@+id/postitImage"
        app:layout_constraintStart_toStartOf="@+id/postitImage"
        app:layout_constraintTop_toTopOf="@+id/postitImage" />

    <TextView
        android:id="@+id/emailLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/golden_chesse"
        android:text="@string/current_email"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="@+id/postitImage"
        app:layout_constraintStart_toStartOf="@+id/postitImage"
        app:layout_constraintTop_toBottomOf="@+id/LogedLoginTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>